fix: contrast issues

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ code {
   --text-color: #000;
   --background-color: #fff;
   --sidebar-color: #fafbfd;
-  --navlink-color: #9e9e9e;
+  --navlink-color: #545454;
   --toggle-shadow: rgba(0, 0, 0, 0.7);
   --toggle-background: var(--sidebar-color);
 
@@ -29,67 +29,90 @@ code {
   --main-heading-color: #000;
 
   
-  --border-color: #828282;
+  --border-color: #595959;
   --border-color-hover: #333333;
   --border-color-focus: #2962ff;
 
   --error-hover-color: #333;
   --error-focus-color: #d32f2f;
-  --error-color: #d84949;
+  --error-color: #A22F2F;
 
-  --disabled-color: #828282;
+  --disabled-color: #595959;
   --disabled-hover-color: #333;
   --disabled-focus-color: #2962ff;
+  
+  /* Dark colors */
+  --dark-text-color: #fff;
+  --dark-background-color: #000;
+  --dark-sidebar-color: #121212;
+  --dark-navlink-color: #9f9f9f;
+  --dark-toggle-shadow: rgba(255, 255, 255, 0.3);
+  --dark-toggle-background: #656565ab;
+
+  --dark-main-text-color: #c7c7c7;
+  --dark-main-heading-color: #f7f2f2;
+
+  --dark-border-color: #969696ff;
+  --dark-border-color-hover: #c3bebe;
+  --dark-border-color-focus: #6991ff;
+
+  --dark-error-hover-color: #979191;
+  --dark-error-focus-color: #E48181;
+  --dark-error-color: #ff6060;
+
+  --dark-disabled-color: #969696ff;
+  --dark-disabled-hover-color: #333;
+  --dark-disabled-focus-color: #2962FF;
 }
 
 @media (prefers-color-scheme: dark) {
   :root:not([color-scheme=light]) {
     color-scheme: dark;
-    --text-color: #fff;
-    --background-color: #000;
-    --sidebar-color: #121212;
-    --navlink-color: #726b6b;
-    --toggle-shadow: rgba(255, 255, 255, 0.3);
-    --toggle-background: #656565ab;
+    --text-color: var(--dark-text-color);
+    --background-color: var(--dark-background-color);
+    --sidebar-color: var(--dark-sidebar-color);
+    --navlink-color: var(--dark-navlink-color);
+    --toggle-shadow: var(--dark-toggle-shadow);
+    --toggle-background: var(--dark-toggle-background);
 
-    --main-text-color: #c7c7c7;
-    --main-heading-color: #f7f2f2;
+    --main-text-color: var(--dark-main-text-color);
+    --main-heading-color: var(--dark-main-heading-color);
 
-    --border-color: #828282;
-    --border-color-hover: #c3bebe;
-    --border-color-focus: #4a73e5;
+    --border-color: var(--dark-border-color);
+    --border-color-hover: var(--dark-border-color-hover);
+    --border-color-focus: var(--dark-border-color-focus);
   
-    --error-hover-color: #979191;
-    --error-focus-color: #d32f2f;
-    --error-color: #d84949;
+    --error-hover-color: var(--dark-error-hover-color);
+    --error-focus-color: var(--dark-error-focus-color);
+    --error-color: var(--dark-error-color);
   
-    --disabled-color: #828282;
-    --disabled-hover-color: #333;
-    --disabled-focus-color: #2962FF;
+    --disabled-color: var(--dark-disabled-color);
+    --disabled-hover-color: var(--dark-disabled-hover-color);
+    --disabled-focus-color: var(--dark-disabled-focus-color);
   }
 }
 
 [color-scheme='dark'] {
   color-scheme: dark;
-  --text-color: #fff;
-  --background-color: #000;
-  --sidebar-color: #121212;
-  --navlink-color: #726b6b;
-  --toggle-shadow: rgba(255, 255, 255, 0.3);
-  --toggle-background: #656565ab;
+  --text-color: var(--dark-text-color);
+  --background-color: var(--dark-background-color);
+  --sidebar-color: var(--dark-sidebar-color);
+  --navlink-color: var(--dark-navlink-color);
+  --toggle-shadow: var(--dark-toggle-shadow);
+  --toggle-background: var(--dark-toggle-background);
 
-  --main-text-color: #c7c7c7;
-  --main-heading-color: #f7f2f2;
+  --main-text-color: var(--dark-main-text-color);
+  --main-heading-color: var(--dark-main-heading-color);
 
-  --border-color: #828282;
-  --border-color-hover: #c3bebe;
-  --border-color-focus: #4a73e5;
+  --border-color: var(--dark-border-color);
+  --border-color-hover: var(--dark-border-color-hover);
+  --border-color-focus: var(--dark-border-color-focus);
 
-  --error-hover-color: #979191;
-  --error-focus-color: #d32f2f;
-  --error-color: #d84949;
+  --error-hover-color: var(--dark-error-hover-color);
+  --error-focus-color: var(--dark-error-focus-color);
+  --error-color: var(--dark-error-color);
 
-  --disabled-color: #828282;
-  --disabled-hover-color: #333;
-  --disabled-focus-color: #2962FF;
+  --disabled-color: var(--dark-disabled-color);
+  --disabled-hover-color: var(--dark-disabled-hover-color);
+  --disabled-focus-color: var(--dark-disabled-focus-color);
 }
